--- a/src/external/config.json
+++ b/src/external/config.json
@@ -1,1 +1,1 @@
-{"ip":"127.0.0.1","port":4242,"users":[{"id":"test","md5pass":"098f6bcd4621d373cade4e832627b4f6"}]}
+{"internal_ip":"127.0.0.1","internal_port":4242,"admin_pass":"098f6bcd4621d373cade4e832627b4f6","users":[{"id":"test","md5pass":"098f6bcd4621d373cade4e832627b4f6"}]}
