--- a/src/internal/Dockerfile
+++ b/src/internal/Dockerfile
@@ -39,6 +39,11 @@ EXPOSE 80
 #===============================================
 #========         Launch Scripts      ==========
 #===============================================
-#Launch this script when build is over
+# Make scripts executable
 RUN chmod +x run.sh
+RUN chmod +x fiber_optic_cut.sh
+RUN chmod +x fiber_optic_restore.sh
+RUN chmod +x ping.sh
+
+#Launch this script when build is over
 CMD /run.sh
