--- a/src/external/config.json
+++ b/src/external/config.json
@@ -1,1 +1,1 @@
-{"internal":{"ip":"127.0.0.1","port":4242},"admins":{"test":"098f6bcd4621d373cade4e832627b4f6"},"users":{"test":"098f6bcd4621d373cade4e832627b4f6"}}
+{"internal":{"ip":"127.0.0.1","port":4242},"admins":{"test":"|098f6bcd4621d373cade4e832627b4f6"},"users":{"test":"|098f6bcd4621d373cade4e832627b4f6"}}
