--- a/src/internal/Dockerfile
+++ b/src/internal/Dockerfile
@@ -9,32 +9,11 @@ ENV DEBIAN-FRONTEND=noninteractive
 
 # Install apt-utils that seems to be required
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends apt-utils
-
-#Install php7, nginx 
-RUN apt-get install -y php7.0
-RUN apt-get install -y php7.0-mysql
-RUN apt-get install -y nginx 
-
-#Install ifconfig
-RUN apt-get install -y net-tools
-
-#Install ping (syntax : ping -c <number of paquets> <ip address>)
-RUN apt-get install -y iputils-ping
-
-#Install iptables
-RUN apt-get install -y iptables
-
-#Install Make
-RUN apt-get install -y make
-
-# Install vi
-RUN apt-get install -y vim
-
 # Install Mysql : we use /bin/bash otherwise the command create a 'redirection unexpected' error.
 RUN /bin/bash -c "debconf-set-selections <<< 'mysql-server mysql-server/root_password password toto'"
 RUN /bin/bash -c "debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password toto'"
-RUN apt-get -y install mysql-server
+RUN apt-get install -y --no-install-recommends apt-utils php7.0 php7.0-mysql nginx net-tools iputils-ping iptables make vim mysql-server
+
 
 #===============================================
 #========          Copy FILES         ==========
